--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "1.0.0",
   "description": "Portfolio profesional moderno para NicoRGhost",
   "main": "index.js",
+  "homepage": "https://nicolas2601.github.io/pagina-react>",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "animejs": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "animejs": "^3.2.1",
     "web-vitals": "^2.1.4"
   },
   "browserslist": {
@@ -35,5 +38,8 @@
     "web-development"
   ],
   "author": "NicoRGhost",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  }
 }
