--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Portfolio profesional moderno para NicoRGhost",
   "main": "index.js",
-  "homepage": "https://nicolas2601.github.io/pagina-react>",
+  "homepage": "https://nicolas2601.github.io/pagina-react",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
