--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "animejs": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
